test/functions/generic/poi/forwarding-wrapper.good
forwarding-wrapper.chpl:24: In method 'fn':
forwarding-wrapper.chpl:25: error: success
  forwarding-wrapper.chpl:15: called as ForwardedClass.fn(param arg1 = 1)
